--- a/SmartBlocks/en.lproj/MainStoryboard.storyboard
+++ b/SmartBlocks/en.lproj/MainStoryboard.storyboard
@@ -98,29 +98,99 @@
                     <view key="view" contentMode="scaleToFill" id="o0L-Ow-cZR">
                         <rect key="frame" x="0.0" y="64" width="1024" height="704"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <subviews>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Iek-dw-7LP">
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="42" id="Kgu-Wk-9hd"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <constraints>
-                            <constraint firstAttribute="bottom" secondItem="Iek-dw-7LP" secondAttribute="bottom" constant="162" id="kDb-gf-6gH"/>
-                            <constraint firstItem="Iek-dw-7LP" firstAttribute="leading" secondItem="o0L-Ow-cZR" secondAttribute="leading" constant="375" id="mID-s9-vDe"/>
-                        </constraints>
                         <simulatedOrientationMetrics key="simulatedOrientationMetrics" orientation="landscapeRight"/>
                     </view>
                     <navigationItem key="navigationItem" id="ZYK-Zu-is4"/>
                     <simulatedOrientationMetrics key="simulatedOrientationMetrics" orientation="landscapeRight"/>
+                    <connections>
+                        <segue destination="Yh1-bu-wGM" kind="push" identifier="goToDrawingviewSegue" id="npb-Ka-vDz"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="TmY-az-n1Q" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2132" y="-161"/>
+        </scene>
+        <!--DrawingVC-->
+        <scene sceneID="c1F-7X-kVw">
+            <objects>
+                <viewController id="Yh1-bu-wGM" customClass="DrawingVC" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="iCG-gS-7g2">
+                        <rect key="frame" x="0.0" y="64" width="1024" height="704"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fR6-ec-z8R">
+                                <items>
+                                    <barButtonItem title="Taille: 1" id="o6Q-gs-Stz">
+                                        <connections>
+                                            <action selector="SizeTapped:" destination="Yh1-bu-wGM" id="kft-x6-W0f"/>
+                                        </connections>
+                                    </barButtonItem>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="ddP-Do-IvO"/>
+                                    <barButtonItem style="plain" id="GeM-3x-C2K">
+                                        <segmentedControl key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="bar" selectedSegmentIndex="0" id="Ig6-4k-Bkp">
+                                            <rect key="frame" x="403" y="8" width="218" height="31"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <segments>
+                                                <segment title="Brush"/>
+                                                <segment title="Line"/>
+                                                <segment title="Rectangle"/>
+                                            </segments>
+                                            <connections>
+                                                <action selector="SwitchTool:" destination="Yh1-bu-wGM" eventType="valueChanged" id="mlf-B0-qyN"/>
+                                            </connections>
+                                        </segmentedControl>
+                                    </barButtonItem>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="I4h-k4-P5L"/>
+                                    <barButtonItem title="Color" id="GIv-vo-2mG">
+                                        <connections>
+                                            <action selector="PopColor:" destination="Yh1-bu-wGM" id="1lF-lZ-Rkc"/>
+                                        </connections>
+                                    </barButtonItem>
+                                </items>
+                            </toolbar>
+                            <toolbar hidden="YES" opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MKU-8S-PGd">
+                                <items>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="cnz-fb-1cY"/>
+                                    <barButtonItem title="Done" style="done" id="RIc-Cv-M3V">
+                                        <connections>
+                                            <action selector="PickerDone:" destination="Yh1-bu-wGM" id="a9n-Ds-Mf7"/>
+                                        </connections>
+                                    </barButtonItem>
+                                </items>
+                            </toolbar>
+                            <pickerView hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ZM1-VE-6ON">
+                                <connections>
+                                    <outlet property="dataSource" destination="Yh1-bu-wGM" id="UZX-Ip-KEA"/>
+                                    <outlet property="delegate" destination="Yh1-bu-wGM" id="QbB-f8-1tP"/>
+                                </connections>
+                            </pickerView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="MKU-8S-PGd" firstAttribute="bottom" secondItem="ZM1-VE-6ON" secondAttribute="top" type="default" id="8Vw-gs-Mvj"/>
+                            <constraint firstItem="fR6-ec-z8R" firstAttribute="trailing" secondItem="iCG-gS-7g2" secondAttribute="trailing" type="default" id="AZ8-4b-mGZ"/>
+                            <constraint firstItem="MKU-8S-PGd" firstAttribute="trailing" secondItem="iCG-gS-7g2" secondAttribute="trailing" type="default" id="HXd-zY-omF"/>
+                            <constraint firstItem="fR6-ec-z8R" firstAttribute="leading" secondItem="iCG-gS-7g2" secondAttribute="leading" type="default" id="dU2-iH-D2f"/>
+                            <constraint firstItem="ZM1-VE-6ON" firstAttribute="trailing" secondItem="iCG-gS-7g2" secondAttribute="trailing" type="default" id="hxM-j9-QWi"/>
+                            <constraint firstItem="ZM1-VE-6ON" firstAttribute="bottom" secondItem="iCG-gS-7g2" secondAttribute="bottom" type="default" id="k8Y-bg-Zkp"/>
+                            <constraint firstItem="MKU-8S-PGd" firstAttribute="leading" secondItem="iCG-gS-7g2" secondAttribute="leading" type="default" id="pwj-ki-5EI"/>
+                            <constraint firstItem="ZM1-VE-6ON" firstAttribute="leading" secondItem="iCG-gS-7g2" secondAttribute="leading" type="default" id="whs-hj-tkj"/>
+                            <constraint firstItem="fR6-ec-z8R" firstAttribute="bottom" secondItem="iCG-gS-7g2" secondAttribute="bottom" type="default" id="zSX-zD-G1F"/>
+                        </constraints>
+                        <simulatedOrientationMetrics key="simulatedOrientationMetrics" orientation="landscapeRight"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="Yif-Kc-D0T"/>
+                    <simulatedOrientationMetrics key="simulatedOrientationMetrics" orientation="landscapeRight"/>
+                    <connections>
+                        <outlet property="brushSizePickerView" destination="ZM1-VE-6ON" id="eLI-Qt-4dX"/>
+                        <outlet property="donePickerToolbar" destination="MKU-8S-PGd" id="2H0-3g-7zc"/>
+                        <outlet property="sizeButton" destination="o6Q-gs-Stz" id="Eof-MG-Xc0"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="GWY-nj-h4i" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3358" y="-161"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="9NJ-No-vXQ">
@@ -142,6 +212,34 @@
             <point key="canvasLocation" x="-305" y="-161"/>
         </scene>
     </scenes>
+    <classes>
+        <class className="DrawingVC" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/DrawingVC.h"/>
+            <relationships>
+                <relationship kind="action" name="PickerDone:"/>
+                <relationship kind="action" name="PopColor:"/>
+                <relationship kind="action" name="SizeTapped:"/>
+                <relationship kind="action" name="SwitchTool:"/>
+                <relationship kind="outlet" name="brushSizePickerView" candidateClass="UIPickerView"/>
+                <relationship kind="outlet" name="donePickerToolbar" candidateClass="UIToolbar"/>
+                <relationship kind="outlet" name="sizeButton" candidateClass="UIBarButtonItem"/>
+            </relationships>
+        </class>
+        <class className="HomeVC" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/HomeVC.h"/>
+            <relationships>
+                <relationship kind="action" name="ConnectionAction:"/>
+                <relationship kind="outlet" name="passwordTextField" candidateClass="UITextField"/>
+                <relationship kind="outlet" name="usernameTextField" candidateClass="UITextField"/>
+            </relationships>
+        </class>
+        <class className="NSLayoutConstraint" superclassName="NSObject">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
+        </class>
+        <class className="SchemaListVC" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/SchemaListVC.h"/>
+        </class>
+    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar" statusBarStyle="blackTranslucent"/>
         <simulatedOrientationMetrics key="orientation"/>
