--- a/SmartBlocks/en.lproj/MainStoryboard.storyboard
+++ b/SmartBlocks/en.lproj/MainStoryboard.storyboard
@@ -41,7 +41,7 @@
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YOK-xW-fr5">
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
-                                <state key="normal" title="Button">
+                                <state key="normal" title="Login">
                                     <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
@@ -105,11 +105,93 @@
                     <simulatedOrientationMetrics key="simulatedOrientationMetrics" orientation="landscapeRight"/>
                     <connections>
                         <segue destination="Yh1-bu-wGM" kind="push" identifier="goToDrawingviewSegue" id="npb-Ka-vDz"/>
+                        <segue destination="Ig6-X0-R7M" kind="modal" identifier="goToAddSchemaViewSegue" id="TOD-CI-jVJ"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="TmY-az-n1Q" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2132" y="-161"/>
+        </scene>
+        <!--Add SchemaVC - Add Schema-->
+        <scene sceneID="Br9-ji-oL6">
+            <objects>
+                <viewController id="Ig6-X0-R7M" customClass="AddSchemaVC" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="nYt-VZ-GqW">
+                        <rect key="frame" x="0.0" y="20" width="1024" height="748"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" allowsMultipleSelection="YES" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="zgI-B2-t15">
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="470" id="WuO-94-ocY"/>
+                                </constraints>
+                                <connections>
+                                    <outlet property="dataSource" destination="Ig6-X0-R7M" id="nwd-t8-Bft"/>
+                                    <outlet property="delegate" destination="Ig6-X0-R7M" id="tsC-fq-8r5"/>
+                                </connections>
+                            </tableView>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Schema name :" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1QI-7T-XDY">
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Ohi-1j-cdu">
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="342" id="rN7-uA-qGV"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Share with :" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="daQ-8p-3pM">
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="n4O-Lv-T3t">
+                                <items>
+                                    <barButtonItem title="Cancel" id="dA6-dr-bkx">
+                                        <connections>
+                                            <action selector="backAction:" destination="Ig6-X0-R7M" id="844-4L-Icc"/>
+                                        </connections>
+                                    </barButtonItem>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="ZEd-t6-cWq"/>
+                                    <barButtonItem title="Create" id="sHE-Qa-eFQ">
+                                        <connections>
+                                            <action selector="createSchema:" destination="Ig6-X0-R7M" id="Gjl-si-Qw0"/>
+                                        </connections>
+                                    </barButtonItem>
+                                </items>
+                            </toolbar>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="Ohi-1j-cdu" firstAttribute="centerX" secondItem="1QI-7T-XDY" secondAttribute="centerX" type="default" id="2AX-aV-fNd"/>
+                            <constraint firstItem="Ohi-1j-cdu" firstAttribute="top" secondItem="nYt-VZ-GqW" secondAttribute="top" constant="130" id="5vb-0S-IYO"/>
+                            <constraint firstItem="1QI-7T-XDY" firstAttribute="top" secondItem="nYt-VZ-GqW" secondAttribute="top" constant="85" id="9Uk-We-FF5"/>
+                            <constraint firstItem="daQ-8p-3pM" firstAttribute="centerX" secondItem="Ohi-1j-cdu" secondAttribute="centerX" type="default" id="Eon-FN-sys"/>
+                            <constraint firstItem="n4O-Lv-T3t" firstAttribute="trailing" secondItem="nYt-VZ-GqW" secondAttribute="trailing" type="default" id="Rs1-lE-yV4"/>
+                            <constraint firstItem="n4O-Lv-T3t" firstAttribute="centerX" secondItem="1QI-7T-XDY" secondAttribute="centerX" type="default" id="WmS-uA-k0z"/>
+                            <constraint firstItem="zgI-B2-t15" firstAttribute="bottom" secondItem="nYt-VZ-GqW" secondAttribute="bottom" type="default" id="ePS-CW-tBj"/>
+                            <constraint firstItem="n4O-Lv-T3t" firstAttribute="top" secondItem="nYt-VZ-GqW" secondAttribute="top" type="default" id="fpI-v4-5pp"/>
+                            <constraint firstItem="zgI-B2-t15" firstAttribute="leading" secondItem="nYt-VZ-GqW" secondAttribute="leading" type="default" id="rFT-fk-OpR"/>
+                            <constraint firstItem="daQ-8p-3pM" firstAttribute="top" secondItem="nYt-VZ-GqW" secondAttribute="top" constant="211" id="u3p-qt-orY"/>
+                            <constraint firstItem="zgI-B2-t15" firstAttribute="trailing" secondItem="nYt-VZ-GqW" secondAttribute="trailing" type="default" id="ufg-5Z-ccB"/>
+                            <constraint firstItem="n4O-Lv-T3t" firstAttribute="leading" secondItem="nYt-VZ-GqW" secondAttribute="leading" type="default" id="wDb-Q0-bE6"/>
+                        </constraints>
+                        <simulatedOrientationMetrics key="simulatedOrientationMetrics" orientation="landscapeRight"/>
+                    </view>
+                    <toolbarItems/>
+                    <navigationItem key="navigationItem" title="Add Schema" id="fHZ-g9-KZO"/>
+                    <nil key="simulatedBottomBarMetrics"/>
+                    <simulatedOrientationMetrics key="simulatedOrientationMetrics" orientation="landscapeRight"/>
+                    <connections>
+                        <outlet property="schemaName" destination="Ohi-1j-cdu" id="Hoc-l9-ifi"/>
+                        <outlet property="usersSelectedTableView" destination="zgI-B2-t15" id="lBd-5T-ywI"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="2lY-2c-Af2" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3358" y="754"/>
         </scene>
         <!--DrawingVC-->
         <scene sceneID="c1F-7X-kVw">
@@ -213,6 +295,15 @@
         </scene>
     </scenes>
     <classes>
+        <class className="AddSchemaVC" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/AddSchemaVC.h"/>
+            <relationships>
+                <relationship kind="action" name="backAction:"/>
+                <relationship kind="action" name="createSchema:"/>
+                <relationship kind="outlet" name="schemaName" candidateClass="UITextField"/>
+                <relationship kind="outlet" name="usersSelectedTableView" candidateClass="UITableView"/>
+            </relationships>
+        </class>
         <class className="DrawingVC" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/DrawingVC.h"/>
             <relationships>
